--- a/index.html
+++ b/index.html
@@ -25,11 +25,42 @@
         <div class="hero-section">
             <div class="hero-card">
                 <h4>This website is awesome</h4>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</title></p>
-                <button>Sign Up</button>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
+                    is lower contrast.</title>
+                </p>
+                <button><a href="">Sign Up</a></button>
             </div>
             <div class="hero-image"></div>
         </div>
+        <article class="info-section">
+            <h4>Some Random Information</h4>
+            <div class="info-cards">
+                <div class="info-card">
+                    <img src="" alt="">
+                    <p>This is some subtext under and illustration</p>
+                </div>
+                <div class="info-card">
+                    <img src="" alt="">
+                    <p>This is some subtext under and illustration</p>
+                </div>
+                <div class="info-card">
+                    <img src="" alt="">
+                    <p>This is some subtext under and illustration</p>
+                </div>
+                <div class="info-card">
+                    <img src="" alt="">
+                    <p>This is some subtext under and illustration</p>
+                </div>
+                <div class="info-card">
+                    <img src="" alt="">
+                    <p>This is some subtext under and illustration</p>
+                </div>
+                <div class="info-card">
+                    <img src="" alt="">
+                    <p>This is some subtext under and illustration</p>
+                </div>
+            </div>
+        </article>
     </main>
     <footer> Copyright © The Odin Project </footer>
 </body>
