Added images to information section

--- a/index.html
+++ b/index.html
@@ -32,32 +32,32 @@
             </div>
             <div class="hero-image"></div>
         </div>
+        <h4 class="info-header">Some Random Information</h4>
         <article class="info-section">
-            <h4>Some Random Information</h4>
             <div class="info-cards">
                 <div class="info-card">
-                    <img src="" alt="">
-                    <p>This is some subtext under and illustration</p>
+                    <img src="./images/motivation01.jpeg" alt="">
+                    <p>This is some subtext under an illustration</p>
                 </div>
                 <div class="info-card">
-                    <img src="" alt="">
-                    <p>This is some subtext under and illustration</p>
+                    <img src="./images/motivation01.jpeg" alt="">
+                    <p>This is some subtext under an illustration</p>
                 </div>
                 <div class="info-card">
-                    <img src="" alt="">
-                    <p>This is some subtext under and illustration</p>
+                    <img src="./images/motivation01.jpeg" alt="">
+                    <p>This is some subtext under an illustration</p>
                 </div>
                 <div class="info-card">
-                    <img src="" alt="">
-                    <p>This is some subtext under and illustration</p>
+                    <img src="./images/motivation01.jpeg" alt="">
+                    <p>This is some subtext under an illustration</p>
                 </div>
                 <div class="info-card">
-                    <img src="" alt="">
-                    <p>This is some subtext under and illustration</p>
+                    <img src="./images/motivation01.jpeg" alt="">
+                    <p>This is some subtext under an illustration</p>
                 </div>
                 <div class="info-card">
-                    <img src="" alt="">
-                    <p>This is some subtext under and illustration</p>
+                    <img src="./images/motivation01.jpeg" alt="">
+                    <p>This is some subtext under an illustration</p>
                 </div>
             </div>
         </article>
