Added css formatting to information section

--- a/index.html
+++ b/index.html
@@ -36,27 +36,39 @@
         <article class="info-section">
             <div class="info-cards">
                 <div class="info-card">
-                    <img src="./images/motivation01.jpeg" alt="">
+                    <div class="image-container">
+                        <img src="./images/motivation01.jpeg" alt="">
+                    </div>
                     <p>This is some subtext under an illustration</p>
                 </div>
                 <div class="info-card">
-                    <img src="./images/motivation01.jpeg" alt="">
+                    <div class="image-container">
+                        <img src="./images/motivation01.jpeg" alt="">
+                    </div>
                     <p>This is some subtext under an illustration</p>
                 </div>
                 <div class="info-card">
-                    <img src="./images/motivation01.jpeg" alt="">
+                    <div class="image-container">
+                        <img src="./images/motivation01.jpeg" alt="">
+                    </div>
                     <p>This is some subtext under an illustration</p>
                 </div>
                 <div class="info-card">
-                    <img src="./images/motivation01.jpeg" alt="">
+                    <div class="image-container">
+                        <img src="./images/motivation01.jpeg" alt="">
+                    </div>
                     <p>This is some subtext under an illustration</p>
                 </div>
                 <div class="info-card">
-                    <img src="./images/motivation01.jpeg" alt="">
+                    <div class="image-container">
+                        <img src="./images/motivation01.jpeg" alt="">
+                    </div>
                     <p>This is some subtext under an illustration</p>
                 </div>
                 <div class="info-card">
-                    <img src="./images/motivation01.jpeg" alt="">
+                    <div class="image-container">
+                        <img src="./images/motivation01.jpeg" alt="">
+                    </div>
                     <p>This is some subtext under an illustration</p>
                 </div>
             </div>
