--- a/index.html
+++ b/index.html
@@ -73,6 +73,30 @@
                 </div>
             </div>
         </article>
+        <article>
+            <div class="quote-section">
+                <div class="quote-container">
+                    <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's
+                        just filling up space, or maybe people will actually read it. Who knows? All I know is that it
+                        looks nice.</div>
+                    <div class="quote-author">-Thor, God of Thunder</div>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="action-section">
+                <div class="action-container">
+                    <div class="action-text">
+                        <h4>Call to action! It's Time!</h4>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <div class="action-button">
+                        <button><a href="">Sign Up</a></button>
+
+                    </div>
+                </div>
+            </div>
+        </article>
     </main>
     <footer> Copyright © The Odin Project </footer>
 </body>
