Updated button styling and increased font size of action section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
                     is lower contrast.</title>
                 </p>
-                <button><a href="">Sign Up</a></button>
+                <a href="" class="button">Sign Up</a>
             </div>
             <div class="hero-image"></div>
         </div>
@@ -91,8 +91,7 @@
                         <p>Sign up for our product by clicking that button right over there!</p>
                     </div>
                     <div class="action-button">
-                        <button><a href="">Sign Up</a></button>
-
+                        <a href="" class="button">Sign Up</a>
                     </div>
                 </div>
             </div>
